# AIPurbixBrickLab

./: README.md
pictobrickWebApp/: .gitignore  compose.yaml
pictobrickWebApp/frontend/: Dockerfile.frontend  middleware.ts  next.config.ts
pictobrickWebApp/frontend/app/: page.tsx
pictobrickWebApp/frontend/app/api/builds/: route.ts
pictobrickWebApp/frontend/app/api/builds/[id]/: route.ts
pictobrickWebApp/frontend/app/api/jobs/: route.ts
pictobrickWebApp/frontend/app/api/jobs/[id]/: route.ts
pictobrickWebApp/frontend/app/api/jobs/[id]/result/: route.ts
pictobrickWebApp/frontend/app/api/ml/jobs/: route.ts
pictobrickWebApp/frontend/app/api/ml/jobs/[jobId]/: route.ts
pictobrickWebApp/frontend/app/api/ml/jobs/[jobId]/glb/: route.ts
pictobrickWebApp/frontend/app/api/ml/mosaic/: route.ts
pictobrickWebApp/frontend/app/create/: page.tsx
pictobrickWebApp/frontend/app/create-3d/: page.tsx
pictobrickWebApp/frontend/app/generation/: page.tsx
pictobrickWebApp/frontend/app/model/[jobId]/: page.tsx
pictobrickWebApp/frontend/app/my-builds/: page.tsx
pictobrickWebApp/frontend/app/testgenerating/: page.tsx
pictobrickWebApp/frontend/components/: GenerationPage.tsx  GlbViewer.tsx  Navbar.tsx
pictobrickWebApp/frontend/lib/: api.ts  builds.ts
pictobrickWebApp/frontend/public/: viewer.js
pictobrickWebApp/ml/: Dockerfile.fastapi  Dockerfile.pipeline  app.py  auth.py  db.py  mosaic_engine.py  pyproject.toml  storage.py  tasks.py
pictobrickWebApp/ml/scripts/: generate_demo.py
pictobrickWebApp/ml/src/ptb_ml/pipeline/: run.py
pictobrickWebApp/ml/src/ptb_ml/sfm_qc/: models.py
